--- a/index.html
+++ b/index.html
@@ -20,53 +20,53 @@
             <h1 class="profile__title">
               Жак-Ив Кусто
             </h1>
-            <button class="profile__edit-button mouseover"></button>
+            <button class="profile__edit-button"></button>
           </div>
           <p class="profile__subtitle">
            Исследователь океана
           </p>
         </div>
         
-        <button class="profile__add-button mouseover"></button>
+        <button class="profile__add-button"></button>
      </section>
      <section class="element">
       <article class="element__card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
         <div class="element__title">
           <p class="element__name">Name of eleddddddddddment</p>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
         <div class="element__title">
           <p class="element__name">Name of elemccccccccccent</p>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
         <div class="element__title">
           <p class="element__name">Name of element</p>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
         <div class="element__title">
           <p class="element__name">Name of elemeccccccccccccnt</p>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
         <div class="element__title">
           <p class="element__name">Name of elementsssssssssssssssssssssssssssss</p>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
         <div class="element__title">
           <p class="element__name">Name of element</p>
           <button class="element__button"></button>
@@ -78,10 +78,10 @@
         <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" name="name" class="popup__name">
         <input type="text" name="job" class="popup__job">
-        <button type="submit" class="popup__save-button mouseover">
+        <button type="submit" class="popup__save-button">
           Сохранить
         </button>
-        <button class="popup__close-button mouseover"></button>
+        <button class="popup__close-button"></button>
       </form>
     </div>
     </main>
@@ -91,6 +91,6 @@
       </p>
     </footer>
   </div>
-  <script src="script.js"></script>
+  <script src="/scripts/script.js"></script>
 </body>
 </html>
