--- a/index.html
+++ b/index.html
@@ -22,53 +22,53 @@
             </h1>
             <button class="profile__edit-button"></button>
           </div>
-          <p class="profile__subtitle">
+          <h2 class="profile__subtitle">
            Исследователь океана
-          </p>
+          </h2>
         </div>
         
         <button class="profile__add-button"></button>
      </section>
      <section class="element">
       <article class="element__card">
-        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <p class="element__name">Name of eleddddddddddment</p>
+          <h3 class="element__name">Name of eleddddddddddment</h3>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <p class="element__name">Name of elemccccccccccent</p>
+          <h3 class="element__name">Name of elemccccccccccent</h3>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <p class="element__name">Name of element</p>
+          <h3 class="element__name">Name of element</h3>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <p class="element__name">Name of elemeccccccccccccnt</p>
+          <h3 class="element__name">Name of elemeccccccccccccnt</h3>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <p class="element__name">Name of elementsssssssssssssssssssssssssssss</p>
+          <h3 class="element__name">Name of elementsssssssssssssssssssssssssssss</h3>
           <button class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
-        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image"></img>
+        <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <p class="element__name">Name of element</p>
+          <h3 class="element__name">Name of element</h3>
           <button class="element__button"></button>
         </div>
       </article>
