--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
       </p>
     </footer>
   </div>
-  <script src="/scripts/script.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
