--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
+  <link type="image/x-icon" href="./images/favicon.ico" rel="shortcut icon">
+  <link type="Image/x-icon" href="./images/favicon.ico" rel="icon">
   <link rel="stylesheet" type="text/css" href="./pages/index.css" >
 </head>
 <body class="root">
