fix: добавлена полная ветка шрифтов Inter для проекта

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <h3 class="element__name">Name of eleddddddddddment</h3>
+          <h3 class="element__name">Карачаевск</h3>
           <button class="element__button"></button>
         </div>
       </article>
