fix: добавлен атрибут к кнопкам

--- a/index.html
+++ b/index.html
@@ -22,56 +22,56 @@
             <h1 class="profile__title">
               Жак-Ив Кусто
             </h1>
-            <button type="button class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button"></button>
           </div>
           <h2 class="profile__subtitle">
            Исследователь океана
           </h2>
         </div>
         
-        <button type="button class="profile__add-button"></button>
+        <button type="button" class="profile__add-button"></button>
      </section>
      <section class="element">
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
           <h3 class="element__name">Карачаевск</h3>
-          <button type="button class="element__button"></button>
+          <button type="button" class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
           <h3 class="element__name">Name of elemccccccccccent</h3>
-          <button type="button class="element__button"></button>
+          <button type="button" class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
           <h3 class="element__name">Name of element</h3>
-          <button type="button class="element__button"></button>
+          <button type="button" class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
           <h3 class="element__name">Name of elemeccccccccccccnt</h3>
-          <button type="button class="element__button"></button>
+          <button type="button" class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
           <h3 class="element__name">Name of elementsssssssssssssssssssssssssssss</h3>
-          <button type="button class="element__button"></button>
+          <button type="button" class="element__button"></button>
         </div>
       </article>
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
           <h3 class="element__name">Name of element</h3>
-          <button type="button class="element__button"></button>
+          <button type="button" class="element__button"></button>
         </div>
       </article>
     </section>
@@ -83,7 +83,7 @@
         <button type="submit" class="popup__save-button">
           Сохранить
         </button>
-        <button type="button class="popup__close-button"></button>
+        <button type="button" class="popup__close-button"></button>
       </form>
     </div>
     </main>
