fix: исправлены мелкие ошибки в верстке

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </article>
     </section>
     <div class="popup">
-      <form class="popup__container">
+      <form class="popup__container" name="edit-profile">
         <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" name="name" class="popup__name">
         <input type="text" name="job" class="popup__job">
@@ -89,7 +89,7 @@
     </main>
     <footer class="footer">
       <p class="footer__copyright">
-        &#169; 2021 Mesto Russia
+        &copy; 2021 Mesto Russia
       </p>
     </footer>
   </div>
