fix: исправлены 99% ошибок в верстке и старт исправлений в коде скрипта

--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
         alt="Аватар пользователя">
         <div class="profile__info">
           <div class="profile__box">
-            <h1 class="profile__title">
-              Жак-Ив Кусто
-            </h1>
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit-button"></button>
           </div>
-          <h2 class="profile__subtitle">
-           Исследователь океана
-          </h2>
+          <h2 class="profile__subtitle">Исследователь океана</h2>
         </div>
         
         <button type="button" class="profile__add-button"></button>
@@ -35,7 +31,7 @@
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" class="element__image">
         <div class="element__title">
-          <h3 class="element__name">Карачаевск</h3>
+          <h3 class="element__name">Карачаево-Черкессия</h3>
           <button type="button" class="element__button"></button>
         </div>
       </article>
@@ -78,8 +74,8 @@
     <div class="popup">
       <form class="popup__container" name="edit-profile">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="name" class="popup__name">
-        <input type="text" name="job" class="popup__job">
+        <input type="text" name="name" class="popup__field popup__field_name ">
+        <input type="text" name="job" class="popup__field popup__field_job">
         <button type="submit" class="popup__save-button">
           Сохранить
         </button>
