--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <div class="popup">
       <form class="popup__container" name="edit-profile">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="name" class="popup__field popup__field_name ">
-        <input type="text" name="job" class="popup__field popup__field_job">
+        <input type="text" name="name" class="popup__field popup__field_name" placeholder="Здесь можно ввести имя">
+        <input type="text" name="job" class="popup__field popup__field_job" placeholder="А здесь профессию">
         <button type="submit" class="popup__save-button">
           Сохранить
         </button>
