--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <article class="element__card">
         <img alt="изображение карточки элемента" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlh2ZXIQJKdlyEEggMOY-5NUjyWk7ir9DXQ&usqp=CAU" 
         class="element__image">
+        <button class="element__button-delete" type="button"></button>
         <div class="element__title">
           <h3 class="element__name">Name of element</h3>
           <button type="button" class="element__button"></button>
