feat: добавить кнопку закрытия попап с изображением карточки

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
     </div>
     <div class="popup popup-view">
       <figure class="popup-view__figure">
+        <button type="button" class="popup__close-button popup__close-button_view"></button>
         <img class="popup-view__image" alt="Изображение карточки">
         <figcaption class="popup-view__caption">lalala</figcaption>
       </figure>
-      <button type="button" class="popup__close-button"></button>
+      
     </div>
     <div class="popup popup_card">
       <form class="popup__container popup__container_card" name="edit-profile">
