Убраны комментарий с созданием уникального ID карточки, изменен тип инпута в форме создания карточки

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="popup popup-view">
       <figure class="popup-view__figure">
         <button type="button" class="popup__close-button popup__close-button_view"></button>
-        <img class="popup-view__image" alt="Изображение карточки">
-        <figcaption class="popup-view__caption">lalala</figcaption>
+        <img class="popup-view__image" alt="Изображение карточки" src="/" >
+        <figcaption class="popup-view__caption"></figcaption>
       </figure>
       
     </div>
@@ -58,7 +58,7 @@
       <form class="popup__container popup__container_card" name="edit-profile">
         <h3 class="popup__title">Новое место</h3>
         <input type="text" name="name" class="popup__field popup__field_place" placeholder="Название">
-        <input type="text" name="job" class="popup__field popup__field_link" placeholder="Ссылка на картинку">
+        <input type="url" name="job" class="popup__field popup__field_link" placeholder="Ссылка на картинку">
         <button type="submit" class="popup__save-button">Создать</button>
         <button type="button" class="popup__close-button popup__close-button_card"></button>
       </form>
