fix: код с массивом карточек вынести в отдельный файл cards.js и подключен выше основного скрипта, у всех изображений карточек динамично подключаемый атрибут alt

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     <template id="create-element">
       <article class="element__card">
-        <img alt="изображение карточки элемента" class="element__image">
+        <img alt="/" class="element__image">
         <button class="element__button-delete" type="button"></button>
         <div class="element__title">
           <h3 class="element__name">Name of element</h3>
@@ -74,6 +74,7 @@
       </article>
     </template>
   </div>
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/script.js"></script>
 </body>
 </html>
