--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <input type="text" name="name" class="popup__field popup__field_name" placeholder="Здесь можно ввести имя" required="required">
         <input type="text" name="job" class="popup__field popup__field_job" placeholder="А здесь профессию" required="required">
         <button type="submit" class="popup__save-button">Сохранить</button>
-        <button type="button" class="popup__close-button"></button>
+        <button type="button" class="popup__close-button popup__close-button_profile"></button>
       </form>
     </div>
     <div class="popup popup-view">
