--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
     </footer>
     <!-- ||||||||||||||||||||||||||||||||||||||||||| -->
     <div class="popup popup_profile">
-      <form class="popup__container popup__container_profile" name="edit-profile">
+      <form class="popup__container popup__container_profile" name="edit-profile" novalidate>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="name" class="popup__field popup__field_name" placeholder="Здесь можно ввести имя" required="required">
-        <input type="text" name="job" class="popup__field popup__field_job" placeholder="А здесь профессию" required="required">
+        <input type="text" name="name" id="popup__field_name" class="popup__field popup__field_name" placeholder="Имя" minlength="2" maxlength="40" required >
+        <span id="popup__field_name-error"></span>
+        <input type="text" name="job" id="popup__field_job" class="popup__field popup__field_job" placeholder="О себе" minlength="2" maxlength="200" required>
+        <span id="popup__field_job-error"></span>
         <button type="submit" class="popup__save-button">Сохранить</button>
         <button type="button" class="popup__close-button popup__close-button_profile"></button>
       </form>
@@ -55,10 +57,12 @@
       
     </div>
     <div class="popup popup_card">
-      <form class="popup__container popup__container_card" name="edit-profile">
+      <form class="popup__container popup__container_card" name="edit-card" novalidate>
         <h3 class="popup__title">Новое место</h3>
-        <input type="text" name="name" class="popup__field popup__field_place" placeholder="Название" required="required">
-        <input type="url" name="job" class="popup__field popup__field_link" placeholder="Ссылка на картинку" required="required">
+        <input id="popup__field_link" type="text" name="name" class="popup__field popup__field_place" placeholder="Название" minlength="2" maxlength="40" required="required">
+        <span id="popup__field_place-error"></span>
+        <input id="popup__field_link"type="url" name="job" class="popup__field popup__field_link" placeholder="Ссылка на картинку" required="required">
+        <span id="popup__field_link-error"></span>
         <button type="submit" class="popup__save-button">Создать</button>
         <button type="button" class="popup__close-button popup__close-button_card"></button>
       </form>
@@ -74,7 +78,9 @@
       </article>
     </template>
   </div>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/cards.js"></script>
   <script src="./scripts/script.js"></script>
+  
 </body>
 </html>
