--- a/index.html
+++ b/index.html
@@ -38,13 +38,29 @@
     </footer>
     <!-- ||||||||||||||||||||||||||||||||||||||||||| -->
     <div class="popup popup_profile">
-      <form class="popup__container popup__container_profile" name="edit-profile" novalidate>
+      <form class="popup__form popup__form_profile" name="edit-profile" novalidate>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="name" id="popup__field_name" class="popup__field popup__field_name" placeholder="Имя" minlength="2" maxlength="40" required >
-        <span id="popup__field_name-error"></span>
-        <input type="text" name="job" id="popup__field_job" class="popup__field popup__field_job" placeholder="О себе" minlength="2" maxlength="200" required>
-        <span id="popup__field_job-error"></span>
-        <button type="submit" class="popup__save-button">Сохранить</button>
+        <input
+        type="text"
+        name="name"
+        id="popup__input_name"
+        class="popup__input popup__input_name"
+        placeholder="Имя"
+        minlength="2"
+        maxlength="40"
+        required>
+        <span id="popup__input_name-error"></span>
+        <input
+        type="text"
+        name="job"
+        id="popup__input_job"
+        class="popup__input popup__input_job"
+        placeholder="О себе"
+        minlength="2"
+        maxlength="200"
+        required>
+        <span id="popup__input_job-error" class></span>
+        <button type="submit" class="popup__button">Сохранить</button>
         <button type="button" class="popup__close-button popup__close-button_profile"></button>
       </form>
     </div>
@@ -57,13 +73,27 @@
       
     </div>
     <div class="popup popup_card">
-      <form class="popup__container popup__container_card" name="edit-card" novalidate>
+      <form class="popup__form popup__form_card" name="edit-card" novalidate>
         <h3 class="popup__title">Новое место</h3>
-        <input id="popup__field_link" type="text" name="name" class="popup__field popup__field_place" placeholder="Название" minlength="2" maxlength="40" required="required">
-        <span id="popup__field_place-error"></span>
-        <input id="popup__field_link"type="url" name="job" class="popup__field popup__field_link" placeholder="Ссылка на картинку" required="required">
-        <span id="popup__field_link-error"></span>
-        <button type="submit" class="popup__save-button">Создать</button>
+        <input
+        type="text"
+        name="name"
+        id="popup__input_place"
+        class="popup__input popup__input_place"
+        placeholder="Название"
+        minlength="2"
+        maxlength="40"
+        required>
+        <span id="popup__input_place-error"></span>
+        <input
+        type="url"
+        name="job"
+        id="popup__input_link"
+        class="popup__input popup__input_link"
+        placeholder="Ссылка на картинку"
+        required>
+        <span id="popup__input_link-error"></span>
+        <button type="submit" class="popup__button">Создать</button>
         <button type="button" class="popup__close-button popup__close-button_card"></button>
       </form>
     </div>
