--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       </article>
     </template>
   </div>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/Script.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/Validate.js"></script>
 </body>
 </html>
