--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
   </div>
   <script type="module" src="./scripts/Script.js"></script>
   <script type="module" src="./scripts/Card.js"></script>
-  <script type="module" src="./scripts/Validate.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
 </html>
