--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </article>
     </template>
   </div>
-  <script type="module" src="./scripts/Script.js"></script>
+  <script type="module" src="./scripts/Index.js"></script>
   <script type="module" src="./scripts/Card.js"></script>
   <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
