fix: удалить вывод консоли

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="popup popup-view">
       <figure class="popup-view__figure">
         <button type="button" class="popup__close-button popup__close-button_view"></button>
-        <img class="popup-view__image" alt="Изображение карточки" src="/" >
+        <img class="popup-view__image" alt="Изображение карточки" src="" >
         <figcaption class="popup-view__caption"></figcaption>
       </figure>
       
@@ -99,7 +99,7 @@
     </div>
     <template id="create-element">
       <article class="element__card">
-        <img alt="/" class="element__image">
+        <img alt="empty" class="element__image">
         <button class="element__button-delete" type="button"></button>
         <div class="element__title">
           <h3 class="element__name">Name of element</h3>
