--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="popup popup-view">
       <figure class="popup-view__figure">
         <button type="button" class="popup__close-button popup__close-button_view"></button>
-        <img class="popup-view__image" alt="Изображение карточки" src="" >
+        <img class="popup-view__image" alt="Изображение карточки" src="/" >
         <figcaption class="popup-view__caption"></figcaption>
       </figure>
       
