--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
   <script type="module" src="./scripts/Index.js"></script>
   <script type="module" src="./scripts/Card.js"></script>
   <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/Section.js"></script>
 </body>
 </html>
